<resources>
    <string name="app_name">OptAdvisor</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="CH_username">请输入用户名：</string>
    <string name="CH_password">请输入密码：</string>
    <string name="CH_name">请输入姓名：</string>
    <string name="CH_birthday">你的生日：</string>
    <string name="CH_telephone">手机号码：</string>
    <string name="email">e-mail：</string>
    <string name="CH_gender">性别</string>
    <string name="CH_finish">填 写 完 成</string>
    <string name="login_username_hint_text">请输入账号:</string>
    <string name="login_pwd_hint_text">请输入密码:</string>
    <string name="input_phonenumber_hint_text">请输入手机号</string>
    <string name="input_verify_hint_text">请输入验证码</string>
    <string name="send_verify_button">发送验证码</string>
    <string name="login_button_text">登 录</string>
    <string name="forget_pwd_text"> 忘记密码？</string>
    <string name="register_button_text">注册 </string>
    <string name="confirm">确 认</string>
    <string name="find_password">找回密码</string>
    <string name="message">消息</string>
    <string name="register_text">新用户注册</string>
    <string name="option_show_text">行情展示</string>
    <string name="build_portfolio_text">构建组合</string>
    <string name="my_combination_text">我的组合</string>
    <string name="person_info">个人中心</string>
    <string name="message_center">消息中心</string>
    <string name="about">关于</string>
    <string name="exit">退出登录</string>
    <string name="my_combination">我的组合</string>
    <string name="my_allocation">资产配置</string>
    <string name="my_hedge">套期保值</string>
    <string name="my_diy">DIY</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_first">请输入新密码</string>
    <string name="reset_again">请再次输入新密码</string>
    <string name="old_password">请输入原始密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="reset_name_text">重命名该组合</string>
    <string name="delete">删除该组合</string>
    <string name="change_track">更改追踪状态</string>
    <string name="etf_button_text">50ETF</string>
    <string name="option_text">期权</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="recommend_text">资产配置</string>
    <string name="hedge_text">套期保值</string>
    <string name="diy_text">DIY</string>
    <string name="welcome">欢迎您！</string>
    <string name="current_portfolio">当前组合:</string>
    <string name="cost">成本</string>
    <string name="time_line">到期时间</string>
    <string name="bond">保证金</string>
    <string name="beta">组合杠杆</string>
    <string name="em">期望收益</string>
    <string name="return_asset">资产收益率</string>
    <string name="option_name">合约简称</string>
    <string name="option_code">交易代码</string>
    <string name="theoritic_value">理论价值</string>
    <string name="value_state">价值状态</string>
    <string name="inner_value">内在价值</string>
    <string name="time_value">时间价值</string>
    <string name="deal_amount">成交量</string>
    <string name="option_delta">Delta</string>
    <string name="option_gamma">Gamma</string>
    <string name="option_theta">Theta</string>
    <string name="option_vega">Vega</string>
    <string name="option_volatility">隐含波动率</string>
    <string name="option_max_price">最高价</string>
    <string name="option_min_price">最低价</string>
    <string name="option_cp">看涨看跌</string>
    <string name="option_cost">成本价</string>
    <string name="option_latest_price">最新价</string>
    <string name="build_time">创建时间</string>
    <string name="hold_quantity">持仓量</string>
    <string name="hedge_ratio">套保比例</string>
    <string name="expect_price">预期价格最低值</string>
    <string name="capital">本金</string>
    <string name="max_loss">最大允许损失</string>
    <string name="expect_price_range">预期价格范围</string>
    <string name="expect_fluctuation">预期价格波动率范围</string>
    <string name="appendix">注：Delta,Theta,Gamma,Vega，Rho分别表示标的证券价格，时间，Delta，波动率，利率等因素变化时期权合约的价格变化。表中数值根据当日收盘数据计算</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
</resources>