<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:orientation="vertical"
    android:background="@color/colorButton">

    <ProgressBar
        android:id="@+id/forget_pwd_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/pic_title_bg"
            app:title="@string/find_password"
            app:titleMarginStart="0dp"
            app:titleTextColor="@color/colorLightWhite" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/colorLightWhite"
        android:layout_below="@id/toolBar"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:cardCornerRadius="4dp"
        app:contentPadding="2dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BlueButtonStyle"
                android:text="@string/confirm"
                android:layout_alignParentBottom="true"/>

            <LinearLayout
                android:id="@+id/send_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_above="@id/new_password"
                android:layout_marginVertical="5dp">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/verify_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_verify_hint_text"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/send_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_verify_button"
                    style="@style/BlueButtonStyle"
                    android:textSize="15dp"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
            android:layout_marginVertical="5dp"
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/send_layout">

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_hint_text"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginVertical="5dp"
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/confirm">

                <EditText
                    android:id="@+id/new_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reset_first"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>