<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:orientation="vertical"
    android:background="@color/colorButton">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/pic_title_bg"
        app:title="@string/reset_password"
        app:titleMarginStart="0dp"
        app:titleTextColor="@color/colorLightWhite" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/colorLightWhite"
        android:layout_below="@id/toolBar"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:cardCornerRadius="4dp"
        app:contentPadding="2dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/reset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BlueButtonStyle"
                android:text="@string/confirm"
                android:layout_alignParentBottom="true"/>
            <android.support.design.widget.TextInputLayout
                android:layout_marginVertical="5dp"
                android:id="@+id/reset_again_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/reset_button">

                <EditText
                    android:id="@+id/reset_again_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reset_again"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reset_first_layout"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/reset_again_layout">

                <EditText
                    android:id="@+id/reset_first_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reset_first"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/reset_first_layout">

                <EditText
                    android:id="@+id/old_password_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>