<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/pic_login_bg11">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <include
        android:id="@+id/bar"
        layout="@layout/login_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/bar"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint_text"
            android:textColorHint="@color/colorGrayBorder"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/shape_tranparent_text"
            android:padding="15dp"
            android:textSize="16sp"
            android:textColor="@color/colorGrayBorder"
            android:layout_margin="8dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pwd_hint_text"
            android:textColorHint="@color/colorGrayBorder"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/shape_tranparent_text"
            android:textColor="@color/colorGrayBorder"
            android:padding="15dp"
            android:textSize="16sp"
            android:layout_margin="8dp"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/login_button_text"
            style="@style/BlueTransparentButtonStyle" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/forgetPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forget_pwd_text"
                android:textSize="15sp"
                android:textColor="@color/colorButton"
                android:background="@color/transParent"
                android:textAlignment="textStart"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/register_text"
                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorButton"
                android:background="@color/transParent" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>